--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 streamlit
 databricks-sdk==0.53.0
+databricks-mcp
+databricks-langchain
+mcp>=1.9
+langgraph
+langchain
+langchain-core
+langchain-community
+nest-asyncio
+pydantic
 prettytable
 python-dotenv
 pandas
 numpy
-matplotlib 
+plotly
 kafka-python
 fpdf2 
